--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "jquery": "^3.3.1",
     "nunjucks": "^3.1.3",
     "express-session" : "~1.16.1",
-    "cookie-parser" : "~1.4.4."
+    "cookie-parser" : "~1.4.4"
   },
   "engines": {
     "node": "8.x"
